--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,19 @@
       To create a production bundle, use `npm run build`.
     -->
     <!-- Compiled and minified CSS -->
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+    <script>
+      $(function() {
+        $(".button-collapse").sideNav();
+        $('.slider').slider({
+          full_width: true,
+          indicators: false,
+          transition: 2000,
+          interval: 8000,
+          height: 700
+        });
+      });
+    </script>
   </body>
 </html>
