--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Orbitron:400,700|Courgette|Cabin:400' rel='stylesheet' type='text/css'>
 
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
@@ -34,7 +34,7 @@
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-572c938201ed5261"></script>
-    <script>
+    <!--<script>
       //closes bootstrap mobile nav on click
       $(function() {
         $(document).on('click','.navbar-collapse.in',function(e) {
@@ -43,6 +43,6 @@
             }
         });
       });
-    </script>
+    </script>-->
   </body>
 </html>
