--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script>
+      var addThisScript = document.createElement('script');
+      addThisScript.setAttribute('src', '//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-572c938201ed5261');
+      window.location.pathname !== '/' && document.head.appendChild(addThisScript);
+    </script>
   </head>
   <body>
     <div id="root"></div>
@@ -31,18 +36,5 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
-    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-572c938201ed5261"></script>
-    <!--<script>
-      //closes bootstrap mobile nav on click
-      $(function() {
-        $(document).on('click','.navbar-collapse.in',function(e) {
-            if( $(e.target).is('a') ) {
-                $(this).collapse('hide');
-            }
-        });
-      });
-    </script>-->
   </body>
 </html>
